@@ -8,7 +8,6 @@ use Math::Prime::Util qw/is_aks_prime/;
 my $use64 = Math::Prime::Util::prime_get_config->{'maxbits'} > 32;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 my $ispp = !Math::Prime::Util::prime_get_config->{xs};
-my $broken64 = (18446744073709550592 == ~0);
 
 plan tests =>   6   # range
               + 1   # small number
